make readme example prettier

--- a/README
+++ b/README
@@ -27,9 +27,10 @@ Example program:
             if(!qs.empty()) {
                 r << "<p>Here is a list of query string key-value pairs!\n"
                     " but watch out for XSS, I'm not sanitizing them!<br>\n";
-                for(auto &p : qs)
+                for(auto &p : qs) {
                     r << "\"" << p.first << "\" -> \""
-                      << p.second << "\"<br>\n";
+                              << p.second << "\"<br>\n";
+                }
                 r << "</p>\n";
             }
         }
